Move data issues section to top

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -299,6 +299,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data issues"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some potential issues in the dataset could be:\n",
+    "\n",
+    "* Messy data\n",
+    "* Different scales\n",
+    "* Mixed types\n",
+    "* Imbalanced data\n",
+    "* Sample bias\n",
+    "* Outliers\n",
+    "* Highly correlated features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imbalanced data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    549\n",
+       "1    342\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic['Survived'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Any nulls?"
    ]
   },
@@ -909,55 +960,6 @@
    ],
    "source": [
     "sns.scatterplot(x=\"Parch\", y=\"SibSp\", hue=\"Survived\", data=titanic)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data issues"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Messy data\n",
-    "* Different scales\n",
-    "* Mixed types\n",
-    "* Imbalanced data\n",
-    "* Sample bias\n",
-    "* Outliers\n",
-    "* Highly correlated features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Imbalanced data?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    549\n",
-       "1    342\n",
-       "Name: Survived, dtype: int64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titanic['Survived'].value_counts()"
    ]
   }
  ],
