Move dataset description to beginning

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -34,7 +34,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset loading"
+    "### Dataset loading"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As toy example we will use the famous Titanic dataset from Kaggle.\n",
+    "\n",
+    "For a description on the meaning of the columns go to https://www.kaggle.com/c/titanic/data"
    ]
   },
   {
@@ -54,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualization helpers"
+    "### Visualization helpers"
    ]
   },
   {
@@ -125,15 +134,6 @@
     "# Exploratory Data Analysis\n",
     "\n",
     "To understand relationships in data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As toy example we will use the famous Titanic dataset from Kaggle.\n",
-    "\n",
-    "For a description on the meaning of the columns go to https://www.kaggle.com/c/titanic/data"
    ]
   },
   {
