Use pickle to export preprocessed dataset

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "# data analysis and wrangling\n",
     "import pandas as pd\n",
+    "import pickle\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import Imputer\n",
     "\n",
@@ -1308,7 +1309,71 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Splitting preprocessed training and testing sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age            0\n",
+       "Embarked       0\n",
+       "Fare           0\n",
+       "Name           0\n",
+       "Parch          0\n",
+       "PassengerId    0\n",
+       "Pclass         0\n",
+       "Sex            0\n",
+       "SibSp          0\n",
+       "Survived       0\n",
+       "Ticket         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train = full[full.Survived.notnull()]\n",
+    "test = full[full.Survived.isnull()]\n",
+    "\n",
+    "train.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Don't mind the missing values for Survived, those come from the test dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exporting data\n",
+    "\n",
+    "Using pickles we can save our changes for the next notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('data/titanic_train_preprocessed.pkl', 'wb') as handle:\n",
+    "    pickle.dump(train, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "with open('data/titanic_test_preprocessed.pkl', 'wb') as handle:\n",
+    "    pickle.dump(test, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   }
  ],
