Add notes about droping values during preprocessing

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -402,7 +402,12 @@
    "source": [
     "## Handle missing values\n",
     "\n",
-    "Droping incomplete rows or columns might risk losing too much data, introducing bias/overfitting, etc...\n",
+    "1. Use `df.isnull().sum()` to see number of missing values per feature.\n",
+    "2. Use `df.dropna()` to drop rows with NULL values, pass axis=1 to drop columns.\n",
+    "3. Fill values using `df.fillna`.\n",
+    "4. Use an Imputer.\n",
+    "\n",
+    "**Important**: Droping incomplete rows or columns might risk losing too much data, introducing bias/overfitting, etc...\n",
     "\n",
     "_Are these values missing at random?_\n",
     "\n",
