Save the full preprocessed dataset instead

--- a/processing.ipynb
+++ b/processing.ipynb
@@ -1413,14 +1413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "with open('data/titanic_train_preprocessed.pkl', 'wb') as handle:\n",
-    "    pickle.dump(train, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
-    "with open('data/titanic_test_preprocessed.pkl', 'wb') as handle:\n",
-    "    pickle.dump(test, handle, protocol=pickle.HIGHEST_PROTOCOL)"
+    "with open('data/titanic_preprocessed.pkl', 'wb') as handle:\n",
+    "    pickle.dump(full, handle, protocol=pickle.HIGHEST_PROTOCOL)"
    ]
   }
  ],
